kafka-cluster/cluster-without-oauth/cluster-1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-1
  labels:
    strimzi.io/kind: Kafka
    #istio-injection: enabled
