kafka-cluster/cluster-without-oauth/cluster-1/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-metrics
  namespace: cluster-1
spec:
  selector:
    strimzi.io/name: cluster-1
    strimzi.io/component-type: kafka
  ports:
    - name: metrics
      port: 9404
      targetPort: tcp-prometheus
